# kafkaChat

./: README.md  pyproject.toml
src/kafkachat/kafka/: cchat.py  con.py  multichat.py  pchat.py  pro.py
